--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-connect": "^5.0.0",
     "gulp-data": "^1.2.1",
+    "gulp-eslint": "^4.0.0",
     "gulp-imagemin": "^3.2.0",
     "gulp-pug": "^3.3.0",
     "gulp-stylus": "^2.6.0"
