--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-eslint": "^4.0.0",
     "gulp-imagemin": "^3.2.0",
     "gulp-pug": "^3.3.0",
+    "gulp-stylint": "^4.0.0",
     "gulp-stylus": "^2.6.0"
   }
 }
