--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-connect": "^5.0.0",
     "gulp-data": "^1.2.1",
     "gulp-eslint": "^4.0.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^3.2.0",
     "gulp-pug": "^3.3.0",
     "gulp-stylint": "^4.0.0",
